objects/CMPL123__WF_Action__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Action_Custom_Label__c</fullName>
        <inlineHelpText>Enter the Name for the Custom Label exactly as it appears on that label in Setup.</inlineHelpText>
        <label>Action Custom Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Comment_Type__c</fullName>
        <label>Comment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Dropdown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__E_Sign_Message_Custom_Label__c</fullName>
        <inlineHelpText>Enter the Name for the Custom Label exactly as it appears on that label in Setup.</inlineHelpText>
        <label>E-Sign Message Custom Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Esign_Message__c</fullName>
        <description>E-signature Message</description>
        <inlineHelpText>E-signature Message</inlineHelpText>
        <label>E-Sign Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Generic_Comment__c</fullName>
        <inlineHelpText>Use a comma to separate the values in the list</inlineHelpText>
        <label>Generic Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Is_Comment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Comment Required</description>
        <inlineHelpText>Check if comment is required</inlineHelpText>
        <label>Is Comment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Is_ESign_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is E-Sign Required</description>
        <inlineHelpText>Check if e-sign is required</inlineHelpText>
        <label>Is E-Sign Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__WF_Action_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>WF Action External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <description>Workflow Actions</description>
    <label>Workflow Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Actions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Action_Custom_Label__c</columns>
        <columns>CMPL123__Is_ESign_Required__c</columns>
        <columns>CMPL123__Is_Comment_Required__c</columns>
        <columns>CMPL123__Esign_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>